--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "express": "^4.21.2",
     "express-handlebars": "^8.0.1",
     "sequelize": "^6.37.5",
-    "tedious": "^18.6.1"
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
